--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -7,5 +7,14 @@
     "password": "Mật khẩu",
     "forgot_password": "Quên mật khẩu?",
     "notification": "Thông báo"
+  },
+  "time": {
+    "just_now": "vừa xong",
+    "min_ago": "phút trước",
+    "hour_ago": "giờ trước"
+  },
+  "home": {
+    "join_conversation": "Tham gia tác chiến",
+    "create_conversation": "Tạo phòng tác chiến"
   }
 }
