--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -3,19 +3,13 @@
     "sign_in": "Đăng nhập",
     "email": "Email",
     "password": "Mật khẩu",
-<<<<<<< HEAD
     "forgot_password": "Quên mật khẩu? ",
-=======
-    "forgot_password": "Quên mật khẩu?",
-<<<<<<< HEAD
->>>>>>> develop
     "notification": "Thông báo",
     "sign_up": "Đăng ký",
     "full_name": "Họ và tên",
     "nick_name": "Biệt danh",
     "phone": "Số điện thoại",
     "confirm_password": "Nhập lại mật khẩu"
-<<<<<<< HEAD
   },
   "message": {
     "error_full_name": "Họ và tên không đúng định dạng",
@@ -29,9 +23,7 @@
     "enter_phone": "Hãy nhập số điện thoại",
     "enter_password": "Hãy nhập mật khẩu",
     "enter_confirm_password": "Hãy nhập xác nhận mật khẩu",
-    "password_not_match": "Xác nhận mật khẩu không khớp"
-=======
-=======
+    "password_not_match": "Xác nhận mật khẩu không khớp",
     "notification": "Thông báo"
   },
   "time": {
@@ -42,7 +34,5 @@
   "home": {
     "join_conversation": "Tham gia tác chiến",
     "create_conversation": "Tạo phòng tác chiến"
->>>>>>> 6d93a869b741fb6f5f86ca47084f28db17db2fd7
->>>>>>> develop
   }
 }
