--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -9,7 +9,8 @@
     "full_name": "Họ và tên",
     "nick_name": "Biệt danh",
     "phone": "Số điện thoại",
-    "confirm_password": "Nhập lại mật khẩu"
+    "confirm_password": "Nhập lại mật khẩu",
+    "code": "Mã quân nhân"
   },
   "message": {
     "error_full_name": "Họ và tên không đúng định dạng",
@@ -24,7 +25,7 @@
     "enter_password": "Hãy nhập mật khẩu",
     "enter_confirm_password": "Hãy nhập xác nhận mật khẩu",
     "password_not_match": "Xác nhận mật khẩu không khớp",
-    "notification": "Thông báo"
+    "enter_code": "Hãy nhập mã quân nhân"
   },
   "time": {
     "just_now": "vừa xong",
