--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -10,7 +10,17 @@
     "nick_name": "Biệt danh",
     "phone": "Số điện thoại",
     "confirm_password": "Nhập lại mật khẩu",
-    "code": "Mã quân nhân"
+    "code": "Mã quân nhân",
+    "room_id": "Mã phòng",
+    "cancel": "Huỷ",
+    "send_request": "Gửi yêu cầu",
+    "create_room": "Tạo phòng",
+    "member": "Thành viên",
+    "add_member": "Thêm thành viên",
+    "input_member_name": "Nhập tên thành viên",
+    "selected": "Đã chọn",
+    "room_name": "Tên phòng",
+    "all_member": "Tất cả thành viên"
   },
   "message": {
     "error_full_name": "Họ và tên không đúng định dạng",
@@ -25,7 +35,9 @@
     "enter_password": "Hãy nhập mật khẩu",
     "enter_confirm_password": "Hãy nhập xác nhận mật khẩu",
     "password_not_match": "Xác nhận mật khẩu không khớp",
-    "enter_code": "Hãy nhập mã quân nhân"
+    "enter_code": "Hãy nhập mã quân nhân",
+    "enter_room_id": "Hãy nhập mã phòng",
+    "enter_room_name": "Hãy nhập tên phòng"
   },
   "time": {
     "just_now": "vừa xong",
