--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -12,9 +12,13 @@
     "phone": "Số điện thoại",
     "confirm_password": "Nhập lại mật khẩu",
     "code": "Mã quân nhân",
-    "verify_code": "Mã xác thực"
+    "verify_code": "Mã xác thực",
+    "sign_in_failed": "Đăng nhập thất bại",
+    "cancel": "Huỷ"
   },
   "message": {
+    "network_error": "Lỗi kết nối, vui lòng kiểm tra đường truyền internet!",
+    "unknow_error": "Đã có lỗi xảy ra, vui lòng thử lại",
     "error_full_name": "Họ và tên không đúng định dạng",
     "error_email": "Email không đúng định dạng",
     "error_password": "Mật khẩu không đúng định dạng",
@@ -29,7 +33,8 @@
     "password_not_match": "Xác nhận mật khẩu không khớp",
     "enter_code": "Hãy nhập mã quân nhân",
     "register_success": "Đăng ký thành công! Vui lòng kiểm tra email để kích hoạt tài khoản.",
-    "forgot_password_done": "Một mật khẩu đã được gửi tới email của bạn! Vui lòng kiểm tra email để lấy lại mật khẩu."
+    "forgot_password_done": "Một mật khẩu đã được gửi tới email của bạn! Vui lòng kiểm tra email để lấy lại mật khẩu.",
+    "account_inactive": "Tài khoản của bạn chưa được xác thực"
   },
   "time": {
     "just_now": "vừa xong",
