--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -13,6 +13,7 @@
     "confirm_password": "Nhập lại mật khẩu",
     "code": "Mã quân nhân",
     "sign_in_failed": "Đăng nhập thất bại",
+    "active_account_failed": "Kich hoạt thất bại",
     "room_id": "Mã phòng",
     "cancel": "Huỷ",
     "send_request": "Gửi yêu cầu",
@@ -43,9 +44,11 @@
     "enter_code": "Hãy nhập mã quân nhân",
     "enter_room_id": "Hãy nhập mã phòng",
     "enter_room_name": "Hãy nhập tên phòng",
+    "enter_verify_code": "Hãy nhập mã xác thực",
     "register_success": "Đăng ký thành công! Vui lòng kiểm tra email để kích hoạt tài khoản.",
     "forgot_password_done": "Một mật khẩu đã được gửi tới email của bạn! Vui lòng kiểm tra email để lấy lại mật khẩu.",
-    "account_inactive": "Tài khoản của bạn chưa được xác thực"
+    "account_inactive": "Tài khoản của bạn chưa được xác thực",
+    "error_verify_code": "Không thể xác minh mã cho tài khoản này. Vui lòng kiểm tra kích hoạt mã và kích hoạt lại tài khoản của bạn."
   },
   "time": {
     "just_now": "vừa xong",
