--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -24,7 +24,8 @@
     "selected": "Đã chọn",
     "room_name": "Tên phòng",
     "all_member": "Tất cả thành viên",
-    "verify_code": "Mã xác thực"
+    "verify_code": "Mã xác thực",
+    "mission": "Nhiệm vụ"
   },
   "message": {
     "network_error": "Lỗi kết nối, vui lòng kiểm tra đường truyền internet!",
