--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -25,7 +25,12 @@
     "selected": "Đã chọn",
     "room_name": "Tên phòng",
     "all_member": "Tất cả thành viên",
-    "verify_code": "Mã xác thực"
+    "verify_code": "Mã xác thực",
+    "create_task": "Tạo nhiệm vụ",
+    "time": "Thời gian",
+    "content_task": "Nội dung nhiệm vụ",
+    "task": "Nhiệm vụ",
+    "to": "đến"
   },
   "message": {
     "network_error": "Lỗi kết nối, vui lòng kiểm tra đường truyền internet!",
