--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -30,7 +30,8 @@
     "camera": "Máy ảnh",
     "video": "Video",
     "audio": "Thông điệp",
-    "gallery": "Thư viện"
+    "gallery": "Thư viện",
+    "attachment": "Tài liệu đính kèm"
   },
   "message": {
     "network_error": "Lỗi kết nối, vui lòng kiểm tra đường truyền internet!",
