--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -57,7 +57,8 @@
     "forgot_password_done": "Một mật khẩu đã được gửi tới email của bạn! Vui lòng kiểm tra email để lấy lại mật khẩu.",
     "account_inactive": "Tài khoản của bạn chưa được xác thực",
     "account_existed": "Tài khoản này đang tồn tại. Vui lòng kiểm tra email, mã quân nhân hoặc biệt danh",
-    "error_verify_code": "Không thể xác minh mã cho tài khoản này. Vui lòng kiểm tra kích hoạt mã và kích hoạt lại tài khoản của bạn."
+    "error_verify_code": "Không thể xác minh mã cho tài khoản này. Vui lòng kiểm tra kích hoạt mã và kích hoạt lại tài khoản của bạn.",
+    "login_fail": "Đăng nhập thất bại! Email hoặc mật khẩu không hợp lệ, vui lòng kiểm tra và thử lại."
   },
   "time": {
     "just_now": "vừa xong",
