update role admin

--- a/assets/i18n/vi.json
+++ b/assets/i18n/vi.json
@@ -104,7 +104,7 @@
   "task_option": {
     "edit_task": "Chỉnh sửa nhiệm vụ",
     "report_task": "Báo cáo kết quả",
-    "completed_task": "Nhiệm vụ hoàn thành",
+    "completed_task": "Hoàn thành nhiệm vụ",
     "close_task": "Hủy bỏ nhiệm vụ"
   },
   "conversation": {
